--- a/.github/workflows/ax6-pub.yml
+++ b/.github/workflows/ax6-pub.yml
@@ -1,27 +1,30 @@
 #========================================================================================================================
 # Cron: min (0 - 59) / hour (0 - 23) / day of month (1 - 31) / month (1 - 12) / day of week (0 - 6)(Sunday - Saturday)
 #========================================================================================================================
-#CI项目名 #Nss精英版=homeproxy #Nss经典版=ssrplus
-name: 【AX6精英版-openwrt】
+#CI项目名
+name: AX6经典版-immortalwrt
 
 on:
-  #对应的是 UTC 时间，需要转换，0 代表北京时间8点，每个月1日/15日12点编译一次
+  #对应的是 UTC 时间，需要转换，0代表北京时间8点，每个月1/15日编译一次
+  #schedule:
+    #- cron: 0 0 1,15 * *
+
   #关闭则手动编译
   workflow_dispatch:
     inputs:
       theme:
-        description: '主题'     
+        description: '主题'
         required: true
-        default: 'material' 
+        default: 'argon'
         type: choice
         options:
-        - material
         - argon
+        - material
 
       OP_IP:
         description: 'IP选项'     
         required: true
-        default: '192.168.31.1'
+        default: '192.168.21.1'
         type: string
         
       OP_router:
@@ -32,9 +35,6 @@ on:
         options:
         - 主路由
         - 旁路由
-        
-  #schedule:
-    #- cron: 0 4 1,15 * *
 
 #CI权限
 permissions: write-all
@@ -56,33 +56,33 @@ jobs:
       #默认地址
       CORE_IP: ${{ github.event.inputs.OP_IP }}
       #默认源码
-      CORE_URL: https://github.com/openwrt/openwrt
+      CORE_URL: https://github.com/immortalwrt/immortalwrt
       #源码版本
-      CORE_BRANCH: main
-      CORE_tag_name: 精英版
+      CORE_BRANCH: master
+      CORE_tag_name: 经典版
       # 头部 配置文件 --- header 目录
       CORE_header: qualcommax_ipq807x_DEVICE_redmi_ax6-stock.config
       # 配置文件 -- config 目录
-      CORE_config: 6.1-tiny.config
+      CORE_config: 6.1-pub.config
       # 补丁脚本 -- patch 目录 不执行: false 没有执行cd openwrt
       #前置补丁 -- 在【更新订阅源】前执行
-      CORE_patch: openwrt-ax6.sh
+      CORE_patch: false
       #后置补丁 -- 在【更新订阅源】后执行
       CORE_patch_after: false
       # 单独处理脚本 -- soc 目录 不执行: false 没有执行cd openwrt
       CORE_SOC_P1_SH: false
       CORE_SOC_P2_SH: false
       # 通用脚本 -- Scripts  目录 不执行: false 已经执行cd openwrt
-      CORE_DIY_P1_SH: openwrt.sh
+      CORE_DIY_P1_SH: immortalwrt.sh
       CORE_DIY_P2_SH: Settings.sh
       #####################################
       #固件初始设置files soc 远程公用files文件夹下载 不适用设置为: false
       CORE_DIY_P3_SH: universal_init.sh
       #######################################
-      #openclash
+      #openclash    有false则不执行
       CORE_DIY_P4_SH: false
       # 删除不兼容的插件 -- remove 目录 不执行: false 已经执行cd openwrt
-      CORE_remove: openwrt_remove.sh
+      CORE_remove: remove.sh
       # 修正files配置文件脚本 -- remove  目录 不执行: false 已经执行cd openwrt
       CORE_Files_SH: edit_files.sh
       # linux 内核
@@ -100,5 +100,6 @@ jobs:
       CORE_Pack: false
       #feeds.conf.default  -- patch 目录 使用默认的：false
       CORE_feeds_conf: false
+      #openclash内核类型 CORE_DIY_P4_SH设置才会生效
       CORE_META: false
       OP_router: ${{ github.event.inputs.OP_router }}
