--- a/header/qualcommax_ipq807x_DEVICE_redmi_ax6-stock.config
+++ b/header/qualcommax_ipq807x_DEVICE_redmi_ax6-stock.config
@@ -105,7 +105,7 @@ CONFIG_TARGET_UBIFS_JOURNAL_SIZE=""
 # CONFIG_PACKAGE_firewall is not set
 CONFIG_PACKAGE_firewall4=y
 
-#Nss
+# NSS
 # CONFIG_PACKAGE_boost is not set
 CONFIG_PACKAGE_kmod-gre6=y
 CONFIG_PACKAGE_kmod-ifb=y
@@ -191,7 +191,7 @@ CONFIG_PACKAGE_dnsmasq_full_noid=y
 # CONFIG_PACKAGE_dnsmasq_full_broken_rtc is not set
 CONFIG_PACKAGE_dnsmasq_full_tftp=y
 
-#增加参数
+# 增加参数
 #CONFIG_TARGET_KERNEL_PARTSIZE=64
 #CONFIG_TARGET_ROOTFS_PARTSIZE=2048
 CONFIG_PACKAGE_kmod-zram=y
@@ -207,7 +207,7 @@ CONFIG_PACKAGE_coreutils-base64=y
 CONFIG_PACKAGE_coreutils-sort=y
 CONFIG_PACKAGE_coreutils-nohup=y
 
-#增加组件
+# 增加组件
 CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_libopenssl=y
@@ -218,7 +218,7 @@ CONFIG_PACKAGE_libustream-openssl=y
 CONFIG_PACKAGE_vlmcsd=y
 CONFIG_PACKAGE_chinadns-ng=y
 
-#透明代理
+# 透明代理
 CONFIG_PACKAGE_iptables-mod-socket=y
 CONFIG_PACKAGE_iptables-mod-iprange=y
 CONFIG_PACKAGE_iptables-mod-conntrack-extra=y
@@ -252,22 +252,37 @@ CONFIG_PACKAGE_iptables-nft=y
 # CONFIG_PACKAGE_iptasn is not set
 # CONFIG_PACKAGE_iptgeoip is not set
 
-#ss
-CONFIG_PACKAGE_shadowsocks-libev-ss-local=n
-CONFIG_PACKAGE_shadowsocks-libev-ss-redir=n
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
-CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
-CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
-CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
+# ss
+# CONFIG_PACKAGE_shadowsocks-libev-ss-local=n
+# CONFIG_PACKAGE_shadowsocks-libev-ss-redir=n
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-check=y
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-local=y
+# CONFIG_PACKAGE_shadowsocksr-libev-ssr-redir=y
+# CONFIG_PACKAGE_shadowsocks-rust-sslocal=y
+# CONFIG_PACKAGE_shadowsocks-rust-ssserver=y
 
-#ddns
-CONFIG_PACKAGE_ddns-scripts=y
-CONFIG_PACKAGE_ddns-scripts-cloudflare=y
-CONFIG_PACKAGE_ddns-scripts_aliyun=y
-CONFIG_PACKAGE_bind-host=y
-CONFIG_PACKAGE_knot-host=n
-CONFIG_PACKAGE_drill=y
+# ddns
+# CONFIG_PACKAGE_ddns-scripts=y
+# CONFIG_PACKAGE_ddns-scripts-cloudflare=y
+# CONFIG_PACKAGE_ddns-scripts_aliyun=y
+# CONFIG_PACKAGE_bind-host=y
+# CONFIG_PACKAGE_knot-host=n
+# CONFIG_PACKAGE_drill=y
+
+# ddns-go
+CONFIG_PACKAGE_ddns-go=y
+CONFIG_PACKAGE_luci-app-ddns-go=y
+CONFIG_PACKAGE_luci-i18n-ddns-go-zh-cn=y
+CONFIG_PACKAGE_ca-bundle=y
+
+# openvpn
+CONFIG_PACKAGE_luci-app-openvpn-server=y
+CONFIG_PACKAGE_luci-i18n-openvpn-server-zh-cn=y
+
+# omcproxy
+CONFIG_PACKAGE_luci-app-omcproxy=y
+CONFIG_PACKAGE_luci-i18n-omcproxy-zh-cn=y
+CONFIG_PACKAGE_omcproxy=y
 
 # ipv6
 CONFIG_PACKAGE_ipv6helper=y
@@ -281,39 +296,6 @@ CONFIG_PACKAGE_ip6tables-mod-nat=y
 CONFIG_PACKAGE_kmod-ip6tables=y
 
 # Translations
-#
-# CONFIG_LUCI_LANG_ar is not set
-# CONFIG_LUCI_LANG_bg is not set
-# CONFIG_LUCI_LANG_bn_BD is not set
-# CONFIG_LUCI_LANG_ca is not set
-# CONFIG_LUCI_LANG_cs is not set
-# CONFIG_LUCI_LANG_da is not set
-# CONFIG_LUCI_LANG_de is not set
-# CONFIG_LUCI_LANG_el is not set
-# CONFIG_LUCI_LANG_es is not set
-# CONFIG_LUCI_LANG_fi is not set
-# CONFIG_LUCI_LANG_fr is not set
-# CONFIG_LUCI_LANG_he is not set
-# CONFIG_LUCI_LANG_hi is not set
-# CONFIG_LUCI_LANG_hu is not set
-# CONFIG_LUCI_LANG_it is not set
-# CONFIG_LUCI_LANG_ja is not set
-# CONFIG_LUCI_LANG_ko is not set
-# CONFIG_LUCI_LANG_lt is not set
-# CONFIG_LUCI_LANG_mr is not set
-# CONFIG_LUCI_LANG_ms is not set
-# CONFIG_LUCI_LANG_nb_NO is not set
-# CONFIG_LUCI_LANG_nl is not set
-# CONFIG_LUCI_LANG_pl is not set
-# CONFIG_LUCI_LANG_pt is not set
-# CONFIG_LUCI_LANG_pt_BR is not set
-# CONFIG_LUCI_LANG_ro is not set
-# CONFIG_LUCI_LANG_ru is not set
-# CONFIG_LUCI_LANG_sk is not set
-# CONFIG_LUCI_LANG_sv is not set
-# CONFIG_LUCI_LANG_tr is not set
-# CONFIG_LUCI_LANG_uk is not set
-# CONFIG_LUCI_LANG_vi is not set
 CONFIG_LUCI_LANG_zh_Hans=y
 # CONFIG_LUCI_LANG_zh_Hant is not set
 # end of Translations
