--- a/.github/workflows/ax6-full.yml
+++ b/.github/workflows/ax6-full.yml
@@ -19,7 +19,7 @@ on:
         type: choice
         options:
         - argon
-        - material
+        - bootstrap
 
       OP_IP:
         description: 'IP选项'     
@@ -80,7 +80,7 @@ jobs:
       CORE_DIY_P3_SH: universal_init.sh
       #######################################
       #openclash    有false则不执行
-      CORE_DIY_P4_SH: openclash64.sh
+      CORE_DIY_P4_SH: false
       # 删除不兼容的插件 -- remove 目录 不执行: false 已经执行cd openwrt
       CORE_remove: remove.sh
       # 修正files配置文件脚本 -- remove  目录 不执行: false 已经执行cd openwrt
@@ -101,5 +101,5 @@ jobs:
       #feeds.conf.default  -- patch 目录 使用默认的：false
       CORE_feeds_conf: false
       #openclash内核类型 CORE_DIY_P4_SH设置才会生效
-      CORE_META: openclash
+      CORE_META: false
       OP_router: ${{ github.event.inputs.OP_router }}
