--- a/.github/workflows/matrix-immortwrt.yml
+++ b/.github/workflows/matrix-immortwrt.yml
@@ -14,7 +14,7 @@ env:
   GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
   CORE_TARGET: Redmi-AX6
   CORE_NAME: Redmi-AX6
-  CORE_THEME: material
+  CORE_THEME: argon
   CORE_URL: https://github.com/VIKINGYFY/immortalwrt
   CORE_BRANCH: main
   CORE_IP: 192.168.21.1
